# seizure_eeg

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  README.rst  config.yaml  data_config.yaml  pyproject.toml  setup.py
docs/figures/: processing.tex
docs/source/: conf.py  index.rst
docs/source/seiz_eeg/: utils.rst
docs/source/tutorials/: 1-events_and_dataframes.rst
eeg_data/: dataset.py
eeg_data/tusz/: io.py  main.py  process.py  utils.py
eeg_data/tusz/signals/: io.py
seiz_eeg/: clips.py  config.py  constants.py  dataset.py  preprocess.py  schemas.py  transforms.py  utils.py
seiz_eeg/chbmit/: io.py
seiz_eeg/preprocess/: __main__.py  io.py
seiz_eeg/preprocess/chbmit/: annotations.py  constants.py  main.py  signals.py
seiz_eeg/preprocess/tusz/: download.py  io.py  main.py  process.py  utils.py
seiz_eeg/preprocess/tusz/annotations/: io.py  process.py
seiz_eeg/preprocess/tusz/signals/: io.py  process.py
seiz_eeg/tusz/: constants.py  download.py  io.py  main.py  process.py  utils.py
seiz_eeg/tusz/annotations/: io.py  process.py
seiz_eeg/tusz/signals/: io.py  process.py
src/data/: dataset.py  schemas.py
src/data/tuh/: annotations.py  constants.py  make_dataset.py  reader.py  signals.py  utils.py
src/data/tusz/: annotations.py  constants.py  dataset.py  download.py  io.py  main.py  make_dataset.py  process.py  signals.py  utils.py  validation.py
src/data/tusz/annotations/: io.py  process.py
src/data/tusz/labels/: io.py  process.py
src/data/tusz/signals/: io.py  process.py
tests/: data_config_test.yaml  test_clips.py  test_dataset.py
